# vorlesung_intro-ins-cpp-library-management

./: .gitignore  README.md
step1/: README.md  main.cpp
step2/: Car.hpp  README.md  main.cpp
step3/: README.md  main.cpp
step4/: README.md
step5/: Makefile  README.md
step5/main/: README.md  main.cpp
step5/src/: Car.cpp
step6/: CMakeLists.txt  README.md  main.cpp
step7/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
